--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "B-E-M",
+  "name": "b-e-m",
   "version": "1.0.0",
   "description": "Typographically pleasing syntax for BEM",
   "main": "index.js",
